<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#0099cc">

    <LinearLayout
            android:id="@+id/fullscreen_content"
            style="?buttonBarStyle"
            android:background="@color/black_overlay"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

        <Button
                android:id="@+id/intent_broadcast"
                android:text="@string/intent_broadcast"
                style="?buttonBarButtonStyle"
                android:keepScreenOn="true"
                android:textColor="#33b5e5"
                android:textStyle="bold"
                android:textSize="30sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <Button
                android:id="@+id/intent_broadcast_enhanced"
                android:text="@string/intent_broadcast_enhanced"
                style="?buttonBarButtonStyle"
                android:keepScreenOn="true"
                android:textColor="#33b5e5"
                android:textStyle="bold"
                android:textSize="30sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <Button
                android:id="@+id/java_mail_api"
                android:text="@string/mail_api"
                style="?buttonBarButtonStyle"
                android:keepScreenOn="true"
                android:textColor="#33b5e5"
                android:textStyle="bold"
                android:textSize="30sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">

        <LinearLayout
                android:id="@+id/fullscreen_content_controls"
                style="?buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:background="@color/black_overlay"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

            <Button
                    android:id="@+id/dummy_button"
                    style="?buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/feedback_button"/>

        </LinearLayout>
    </FrameLayout>

</FrameLayout>
